packages/parser/test/parser/E0162.txt
try {} catch err: Error
===== err =====
anonymous:1:24: ParseError: E0162 - Expected try statement handler body after handler parameter declaration
1 | try {} catch err: Error
  |                        ^
